attached_assets/Pasted-Failed-to-read-the-app-config-from-the-project-using-np_1767111908502.txt
Failed to read the app config from the project using "npx expo config" command: npx expo config --json exited with non-zero code: 1.
Falling back to the version of "@expo/config" shipped with the EAS CLI.
Error parsing JSON: {
  "expo": {
    "name": "Glow Up Sports",
    "slug": "glow-up-sports-qimo0pvm-ks03bklnmcri",
    "version": "1.0.0",
    "runtimeVersion": {
      "policy": "appVersion"
    },
    "updates": {
      "enabled": true,
      "checkAutomatically": "ON_LOAD",
      "fallbackToCacheTimeout": 0,
      "url": "https://u.expo.dev/ce3ccb00-0553-4abc-a038-1a93b7483738"
    }

    "orientation": "portrait",
    "icon": "./assets/images/icon.png",
    "scheme": "glowupsports",
    "userInterfaceStyle": "dark",
    "newArchEnabled": true,
    "ios": {
      "supportsTablet": true,
      "bundleIdentifier": "com.glowupsports.app"
    },
    "android": {
      "adaptiveIcon": {
        "backgroundColor": "#1A1A1A",
        "foregroundImage": "./assets/images/android-icon-foreground.png",
        "backgroundImage": "./assets/images/android-icon-background.png",
        "monochromeImage": "./assets/images/android-icon-monochrome.png"
      },
      "edgeToEdgeEnabled": true,
      "predictiveBackGestureEnabled": false,
      "package": "com.glowupsports.app"
    },
    "web": {
      "output": "single",
      "favicon": "./assets/images/favicon.png"
    },
    "plugins": [
      [
        "expo-splash-screen",
        {
          "image": "./assets/images/splash-icon.png",
          "imageWidth": 200,
          "resizeMode": "contain",
          "backgroundColor": "#1A1A1A",
          "dark": {
            "backgroundColor": "#1A1A1A"
          }
        }
      ],
      "expo-web-browser",
      [
        "expo-updates",
        {
          "username": "glow-up-sports"
        }
      ]
    ],
    "experiments": {
      "reactCompiler": true
    },
    "extra": {
      "eas": {
        "projectId": "ce3ccb00-0553-4abc-a038-1a93b7483738"
      }
    }
  }
}

├─ File: /home/runner/workspace/app.json
└─ Cause: SyntaxError: JSON5: invalid character '\"' at 16:5
  14 |     }
  15 | 
> 16 |     "orientation": "portrait",
     |     ^
  17 |     "icon": "./assets/images/icon.png",
  18 |     "scheme": "glowupsports",
  19 |     "userInterfaceStyle": "dark",
    Error: channel:create command failed.
~/workspace$ 